--- a/client/src/app/shared/layouts/bot-layout/bot-layout.component.css
+++ b/client/src/app/shared/layouts/bot-layout/bot-layout.component.css
@@ -40,7 +40,7 @@
     margin-bottom: 8px;
 }
 .div-img {
-    max-width: 12rem;
+    max-width: 17vw;
     margin: auto;
 }
 
@@ -59,7 +59,7 @@
     display: table-cell;
     vertical-align: bottom;
     font-family: Arial, sans-serif;
-    font-size: 0.6cm;
+    font-size: 2vw;
  } 
 
  .btn {
