--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -30,5 +30,7 @@
          </h1>
     </form>
 </div>
-<img id="emoPicture" src="/images/emo.png">
-<h1 class="tc" id="emoText" appEasyLang>ЭМО</h1>
+<div class="emo_pt">
+     <img id="emoPicture" src="/images/emo.png">
+     <h1 class="tc" id="emoText" appEasyLang>ЭМО</h1>
+</div>
