--- a/client/src/app/settings-page/settings-page.component.css
+++ b/client/src/app/settings-page/settings-page.component.css
@@ -25,26 +25,26 @@ td {
     margin-bottom: 0.3cm;
 }
 .yes {
-    height: 70px;
-    width: 70px;
+    height: 6vw;
+    width: 6vw;
     background: url('/images/tick.png');
     background-size: 100% 100%;
 }
 .no {
-    height: 70px;
-    width: 70px;
+    height: 6vw;
+    width: 6vw;
     background: url('/images/cross.png');
     background-size: 100% 100%;
 }
 .grey {
-    height: 70px;
-    width: 70px;
+    height: 6vw;
+    width: 6vw;
     background: url('/images/bw.png');
     background-size: 100% 100%;
 }
 .color {
-    height: 70px;
-    width: 70px;
+    height: 6vw;
+    width: 6vw;
     background: url('/images/color.png');
     background-size: 100% 100%;
 }
