--- a/client/src/theme/style.css
+++ b/client/src/theme/style.css
@@ -6,17 +6,14 @@ body {
 }
 
 .form {
-    left: 10%;
-    width: 40%;
-    top: 50px;
-    bottom: 50px;   
+    left: 5%;
+    width: 40%;  
     display: inline-block; 
     position: relative;
-    margin-top: 1%;
  }
 
 .pNotAdmin {
-    font-size: 0.8cm;
+    font-size: 2.5vw;
     font-family: Arial, sans-serif;
 }
 
@@ -25,8 +22,8 @@ textarea {
 }
  
 .entrance {
-	height: 1.4cm;
-	font-size: 1.2cm; 
+	height: 4.5vw;
+	font-size: 4.2vw; 
     margin-left: 20px;
 }
 
@@ -43,6 +40,7 @@ textarea {
     border: 4px solid red;
     border-radius: 5px;
     margin-left: 20px;
+    font-size: 3.2vw;
 }
 
 #textarea_entrance {
@@ -99,26 +97,28 @@ p, img, a:visited, a:active, a:hover {
 
 #emoPicture {
      z-index: 2;
-     position: fixed;
-     width: 30%;
-     max-width: 50%;
+     position: relative;
+     width: 25vw;
      height: auto;
-     top: 10%;
-     right: 100px;
+     padding-top: 2vw;
+     margin: auto;
 }
 
 
 #emoText {
-    position: fixed;
-    bottom: 10%;
-    width: 30%;
-    right: 100px;
+    position: relative;
+    width: 25vw;
     display: block;
     text-align: center;
-    font-size: 2cm;
+    font-size: 4.2vw; 
     z-index: 3;
 }
 button, button:active, button:focus,
 audio, video {
     outline: none !important;
+}
+
+.emo_pt {
+    display: inline-block;
+    margin-left: 25vw;
 }
