--- a/client/src/app/shared/layouts/chat-layout/chat-layout.component.css
+++ b/client/src/app/shared/layouts/chat-layout/chat-layout.component.css
@@ -12,8 +12,12 @@
     margin-bottom: 8px;
 }
 .div-img {
-    max-width: 17vw;
+    max-width: 13vw;
     margin: auto;
+}
+.div-text {
+    max-width: 14vw;
+    display: inline-block;
 }
 .div-audio {
     width: 17vw;
@@ -34,7 +38,7 @@
     display: table-cell;
     vertical-align: bottom;
     font-family: Arial, sans-serif;
-    font-size: 2vw;
+    font-size: 1.7vw;
  } 
 
  .message {
@@ -82,8 +86,8 @@
  }
 
  .footer {
-    width: 40px;
-    height: 40px;
+    width: 2.5vw;
+    height: 2.5vw;
     margin-left: 5px;
     margin-right: 5px;
     display: inline-block;
@@ -106,6 +110,11 @@
 
 .answers-message-btn {
     background-image: url('/images/question.png');
+    background-size: 100% 100%;
+}
+
+.screenread-btn {
+    background-image: url('/images/screenreader.png');
     background-size: 100% 100%;
 }
 
