--- a/client/src/app/shared/layouts/group-layout/group-layout.component.html
+++ b/client/src/app/shared/layouts/group-layout/group-layout.component.html
@@ -17,8 +17,13 @@
                                         <img [src]="message" class="div-img green-cursor" (click)="openZoom(message)">
                                    </div>
 
-                                   <div *ngIf="letter.type[i] == 2" class="div-in-li" appEasyLang>
-                                        {{message}}
+                                   <div *ngIf="letter.type[i] == 2" class="div-in-li">
+                                        <div appEasyLang class="div-text">{{message}}</div>
+                                        <div class="footer-out">
+                                             <div class="screenread-btn footer green-cursor" 
+                                             *ngIf="session.screenreader"
+                                             (click)="screenRead(message)"></div>
+                                        </div>
                                    </div>
 
                                    <div *ngIf="letter.type[i] == 3" class="div-in-li">
@@ -64,8 +69,13 @@
                                         </div>
                                    </div>
 
-                                   <div *ngIf="letter.type[i] == 2" class="div-in-li" appEasyLang>
-                                        {{message}}
+                                   <div *ngIf="letter.type[i] == 2" class="div-in-li">
+                                        <div appEasyLang class="div-text">{{message}}</div>
+                                        <div class="footer-out">
+                                             <div class="screenread-btn footer green-cursor" 
+                                             *ngIf="session.screenreader"
+                                             (click)="screenRead(message)"></div>
+                                        </div>
                                    </div>
 
                                    <div *ngIf="letter.type[i] == 3" class="div-in-li">
