--- a/client/src/app/users-page/users-form/users-form.component.html
+++ b/client/src/app/users-page/users-form/users-form.component.html
@@ -100,6 +100,10 @@
     <input name="birthdays" type="radio" value="true" formControlName="birthdays"> Да <br>
     <input name="birthdays" type="radio" value="false" formControlName="birthdays"> Нет <br>
 
+    <p class="in_new_user dark-{{session.firstColor}}-color">Доступна ли озвучка текстовых сообщений:</p>
+    <input name="screenreader" type="radio" value="true" formControlName="screenreader"> Да <br>
+    <input name="screenreader" type="radio" value="false" formControlName="screenreader"> Нет <br>
+
     <p class="in_new_user dark-{{session.firstColor}}-color">Доступена ли страница "Мероприятия":</p>
     <input name="events" type="radio" value="true" formControlName="events"> Да <br>
     <input name="events" type="radio" value="false" formControlName="events"> Нет <br>
