--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -34,3 +34,10 @@
      <img id="emoPicture" src="/images/emo.png">
      <h1 class="tc" id="emoText" appEasyLang>ЭМО</h1>
 </div>
+<div class="privacy">
+     <a 
+     routerLink="/privacy" 
+     class="link">
+          Политика конфиденциальности
+     </a>
+</div>
