--- a/client/src/app/search-page/search-page.component.css
+++ b/client/src/app/search-page/search-page.component.css
@@ -1,6 +1,6 @@
 .header {
     width: 79%;
-    height: 1.5cm;
+    height: 'auto';
     top: 0;
     position: fixed;
     padding: 0.2cm;
@@ -15,7 +15,6 @@
     margin-right: 2%;
     height: 0.8cm;
     font-size: 1.7vw;
-    margin-bottom: 1cm;
 }
 select.inheader {
     font-size: 1.5vw;
