--- a/client/src/app/users-page/users-form/users-form.component.html
+++ b/client/src/app/users-page/users-form/users-form.component.html
@@ -140,7 +140,7 @@
     <br>
     <a class="nav-admin form_picture_button middle-{{session.firstColor}}-bg-hover" [routerLink]="['/manage/users']">Назад</a>
 
-    <button id="submit_button" type="submit" (click)="onSubmit()" hidden></button>
+    <button id="submit_button" type="submit" (click)="onSubmit()" hidden [disabled]="form.disabled || form.invalid"></button>
     <label for="submit_button" class="new_user_button middle-{{session.firstColor}}-bg-hover">Сохранить</label>
 </form>
 
