--- a/client/src/app/admin-events-page/admin-events-page.component.html
+++ b/client/src/app/admin-events-page/admin-events-page.component.html
@@ -3,6 +3,7 @@
         <div *ngIf="session.levelStatus == 1">
             <p class="in_user_filtr dark-{{session.firstColor}}-color">Учреждение:</p>
             <select *ngIf="institutions$ | async as institutions" [(ngModel)]="institution" (change)="onFilter()">
+                <option  value="">Любое</option>
                 <option *ngFor="let institution of institutions" value="{{institution._id}}">{{institution.name}}</option>
             </select>
         </div>
