--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -1,6 +1,6 @@
 <div class="form">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-         <h1>
+
               <p class="entrance tc notadmin" appEasyLang>Логин: </p>
               <input 
               formControlName="login"
@@ -27,14 +27,20 @@
               appEasyLang>
                     ВХОД
                </label>            
-         </h1>
+
     </form>
+    
 </div>
 <div class="emo_pt">
      <img id="emoPicture" src="/images/emo.png">
      <h1 class="tc" id="emoText" appEasyLang>ЭМО</h1>
+     <a 
+     href="https://play.google.com/store/apps/details?id=com.centervnl.emo" 
+     >
+          <img src='/images/google-play-badge.png' class="market">
+     </a>
 </div>
-<div class="privacy">
+<div class="footer">
      <a 
      routerLink="/privacy" 
      class="link">
