--- a/client/src/app/shared/layouts/login-layout/login-layout.component.html
+++ b/client/src/app/shared/layouts/login-layout/login-layout.component.html
@@ -1,3 +1,19 @@
-
-<router-outlet></router-outlet>
+<div class="nav light-1-bg">
+    <ul id="nav-mobile" class="">
+        <li
+        class="nav-admin-li"
+        *ngFor="let link of links"
+        >
+            <a 
+            [routerLink]="[link.url]" 
+            class="nav-admin middle-1-bg-hover"
+            routerLinkActive="manage-active">
+                {{link.name}}
+            </a>
+        </li>          
+    </ul>
+</div>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
 
