--- a/client/src/theme/style.css
+++ b/client/src/theme/style.css
@@ -10,6 +10,7 @@ body {
     width: 40%;  
     display: inline-block; 
     position: relative;
+    vertical-align: top;
  }
 
 .pNotAdmin {
@@ -22,8 +23,8 @@ textarea {
 }
  
 .entrance {
-	height: 4.5vw;
-	font-size: 4.2vw; 
+	height: 3vw;
+	font-size: 2.8vw; 
     margin-left: 20px;
 }
 
@@ -40,7 +41,7 @@ textarea {
     border: 4px solid red;
     border-radius: 5px;
     margin-left: 20px;
-    font-size: 3.2vw;
+    font-size: 2.5vw;
 }
 
 #textarea_entrance {
